syntax = "proto3";

package hstream.server;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

option java_package = "io.hstream.internal";
option java_multiple_files = true;
option java_outer_classname = "HStreamProto";

service HStreamApi {

  rpc Append(AppendRequest) returns (AppendResponse) {}

  rpc CreateSubscription(Subscription) returns (Subscription) {}

  rpc DeleteSubscription(DeleteSubscriptionRequest) returns (google.protobuf.Empty) {}

  rpc ListSubscriptions(google.protobuf.Empty) returns (ListSubscriptionsResponse) {}

  rpc Subscribe(SubscribeRequest) returns (SubscribeResponse) {}

  rpc Fetch(FetchRequest) returns (FetchResponse) {}

  rpc CommitOffset(CommittedOffset) returns (CommittedOffset) {}

  rpc sendConsumerHeartbeat(ConsumerHeartbeatRequest) returns (ConsumerHeartbeatResponse) {}

  rpc CreateStream(Stream) returns (Stream) {}

  rpc DeleteStream(DeleteStreamRequest) returns (google.protobuf.Empty) {}

  rpc ListStreams(google.protobuf.Empty) returns (ListStreamsResponse) {}

  rpc CreateQueryStream(CreateQueryStreamRequest) returns (CreateQueryStreamResponse) {}

  rpc StreamingFetch(stream StreamingFetchRequest) returns (stream StreamingFetchResponse) {}

  rpc DescribeCluster(google.protobuf.Empty) returns (DescribeClusterResponse) {}

  rpc LookupStream(LookupStreamRequest) returns (LookupStreamResponse) {}

  rpc LookupSubscription(LookupSubscriptionRequest) returns (LookupSubscriptionResponse) {}

  rpc WatchSubscription(WatchSubscriptionRequest) returns (stream WatchSubscriptionResponse) {}

  rpc LookupSubscriptionWithOrderingKey(LookupSubscriptionWithOrderingKeyRequest) returns (LookupSubscriptionWithOrderingKeyResponse) {}
}

message AppendRequest {
  string streamName = 1;
  repeated HStreamRecord records = 2;
}

message AppendResponse {
  string streamName = 1;
  repeated RecordId recordIds = 2;
}

message Subscription {
  string subscriptionId = 1;
  string streamName = 2;
  int32 ackTimeoutSeconds = 3;
  int32 maxUnackedRecords = 4;
}

message SubscribeRequest {
  string subscriptionId = 1;
}

message SubscribeResponse {
  string subscriptionId = 1;
}

message FetchRequest {
  string subscriptionId = 1;
  uint64 timeout = 2;
  uint32 maxSize = 3;
}

message FetchResponse {
  repeated ReceivedRecord receivedRecords = 1;
}

message ReceivedRecord {
  RecordId recordId = 1;
  bytes record = 2;
}

message CommittedOffset {
  string subscriptionId = 1;
  RecordId offset = 2;
}

message Stream {
  string streamName = 1;
  uint32 replicationFactor = 2;
  uint32 backlogDuration = 3;
}

message DeleteStreamRequest {
  string streamName = 1;
  bool ignoreNonExist = 2;
  bool force = 3;
}

message ListStreamsResponse {
  repeated Stream streams = 1;
}

message HStreamRecord {
  // Required.
  HStreamRecordHeader header = 1;

  // Optional.
  // Payload may be empty.
  bytes payload = 2;
}

message HStreamRecordHeader {
  // Required.
  // Flag for payload.
  enum Flag {
    JSON = 0;
    RAW  = 1;
  }
  Flag flag = 1;

  // Optional.
  // Attributes attached to this record.
  map<string, string> attributes = 2;

  // Required.
  // The time at which the message was published,
  // populated by the server.
  google.protobuf.Timestamp publish_time = 3;

  // Optional.
  // key for the message.
  string key = 4;
}

message RecordId {
  uint64 shardId = 1;
  // LSN of the total batch records
  uint64 batchId = 2;
  // Offset of each record in the batch
  uint32 batchIndex = 3;
}

message DeleteSubscriptionRequest {
  string subscriptionId = 1;
  bool force = 2;
}

message ListSubscriptionsResponse {
  repeated Subscription subscription = 1;
}

message ConsumerHeartbeatRequest {
  string subscriptionId = 1;
}

message ConsumerHeartbeatResponse {
  string subscriptionId = 1;
}

message CreateQueryStreamRequest {
  Stream queryStream = 1;
  string queryStatements = 2;
}

message CreateQueryStreamResponse {
  Stream queryStream = 1;
  Query streamQuery = 2;
}

message Query {
  string id = 1;
  int32 status = 2;
  int64 createdTime = 3;
  string queryText = 4;
}

message StreamingFetchRequest {
  string subscriptionId = 1;
  string consumerName = 2;
  repeated RecordId ackIds = 3;
}

message StreamingFetchResponse {
  repeated ReceivedRecord receivedRecords = 1;
}

message DescribeClusterResponse {
  string protocolVersion = 1;
  string serverVersion = 2;
  repeated ServerNode serverNodes = 3;
}

message ServerNode {
  uint32 id = 1;
  string host = 2;
  uint32 port = 3;
}

message LookupStreamRequest {
  string streamName = 1;
  string orderingKey = 2;
}

message LookupStreamResponse {
  string streamName = 1;
  string orderingKey = 2;
  ServerNode serverNode = 3;
}

message LookupSubscriptionRequest {
  string subscriptionId = 1;
}

message LookupSubscriptionResponse {
  string subscriptionId = 1;
  ServerNode serverNode = 2;
}

message LookupSubscriptionWithOrderingKeyRequest {
  string subscriptionId = 1;
  string orderingKey = 2;
}

message LookupSubscriptionWithOrderingKeyResponse {
  string subscriptionId = 1;
  string orderingKey = 2;
  ServerNode serverNode = 3;
}

message WatchSubscriptionRequest {
  string subscriptionId = 1;
  string consumerName = 2;
}

message WatchSubscriptionResponse {
  message SubscriptionAdd {
    string orderingKey = 1;
  }

  message SubscriptionRemove {
    string orderingKey = 1;
  }

  string subscriptionId = 1;
  oneof change {
    SubscriptionAdd changeAdd = 7;
    SubscriptionRemove changeRemove = 8;
  }
}
